--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@angular/common": "~9.1.11",
     "@angular/compiler": "~9.1.11",
     "@angular/core": "~9.1.11",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~9.1.11",
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "class-transformer": "^0.3.1",
+    "firebase": "^7.19.0",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.0-rc.3",
     "rxjs": "~6.5.4",
